# ufc-analysis-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  render.yaml  requirements.txt  start.sh
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260716_0001_initial_schema.py  20260717_0002_phase3_training_pipeline.py  20260717_0003_phase4a_odds.py  20260717_0004_phase5_context.py  20260718_0005_context_signal_source_unique.py  20260718_0006_upcoming_ingestion.py  20260718_0007_fight_analysis_pipeline.py
app/: __init__.py  config.py  dependencies.py  main.py
app/analysis/: __init__.py  read_service.py  schemas.py  service.py
app/api/: analysis.py  calculations.py  context.py  events.py  fighters.py  health.py  ingestion.py  matchups.py
app/calculations/: __init__.py  confidence.py  elo.py  matchup_advantages.py  normalization.py  opponent_adjustment.py  performance_scores.py  recency.py  rolling_averages.py  style_scores.py
app/cli/: __init__.py  ingest_upcoming.py  run_upcoming_analysis.py
app/context/: __init__.py  calculations.py  enums.py  matching.py  registry.py  reliability.py  schemas.py
app/database/: base.py  session.py
app/evaluation/: __init__.py  chronological_split.py  metrics.py
app/ingestion/: __init__.py  schemas.py  service.py
app/ml/: __init__.py  elo_baseline.py  (+1 more)
scripts/: __init__.py  context.py  odds.py  phase3.py  rebuild_all_profiles.py  recalculate_fighter.py  seed_sample_data.py  validate_dataset.py
(+75 files in other folders)
