[project]
name = "ufc-analysis-engine"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "joblib"]
ignore_missing_imports = true
